Closed
Bug 1667183
Opened 5 years ago
Closed 5 years ago
Restart fork server on error
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
85 Branch
| Tracking | Status | |
|---|---|---|
| firefox85 | --- | fixed |
People
(Reporter: sinker, Assigned: sinker)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:83.0) Gecko/20100101 Firefox/83.0
Steps to reproduce:
Kill the forkserver process anytime.
Actual results:
Gecko can not create new content processes anymore.
Expected results:
The Gecko should fail back to fork new content process from the chrome process instead. And, the forkserver process should be restarted later.
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → thinker.li
| Assignee | ||
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:sinker, could you have a look please?
For more information, please visit auto_nag documentation.
Flags: needinfo?(thinker.li)
Updated•5 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(thinker.li)
Pushed by gsvelto@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/db78c085b5ca
Restart fork server on error. r=gsvelto
Comment 5•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox85:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•