Bug 1667183 - Restart fork server on error. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D91385